# uncurl

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/uncurl/: __init__.py  parse.py
