[project]
name = "uncurl"
dynamic = ["version"]
description = "A tool that converts curl commands into clean and readable Python requests code."
readme = "README.md"
authors = [
    { name = "lisoboss", email = "37949544+lisoboss@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
uncurl = "uncurl:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
